# zk-comparison

./: Cargo.toml  rust-toolchain.toml
circuits/: input.json  verify.circom  witness.wtns
circuits/verify_cpp/: Makefile  verify.cpp
circuits/verify_js/: verify.wasm
src/: lib.rs
